cluster/base/apps/test-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-website
  namespace: test-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-website
  template:
    metadata:
      labels:
        app: test-website
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
