cluster/base/apps/test-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-website
  namespace: test-apps
spec:
  selector:
    app: test-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
