cluster/base/apps/test-website/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-website
  namespace: test-apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`test.fanen.dk`)
      kind: Rule
      services:
        - name: test-website
          port: 80
